; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_multi.c_multi_ischanged.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_multi.c_multi_ischanged.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_multi = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Curl_multi*, i32)* @multi_ischanged to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @multi_ischanged(%struct.Curl_multi* %0, i32 %1) #0 {
  %3 = alloca %struct.Curl_multi*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.Curl_multi* %0, %struct.Curl_multi** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.Curl_multi*, %struct.Curl_multi** %3, align 8
  %7 = getelementptr inbounds %struct.Curl_multi, %struct.Curl_multi* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @FALSE, align 4
  %13 = load %struct.Curl_multi*, %struct.Curl_multi** %3, align 8
  %14 = getelementptr inbounds %struct.Curl_multi, %struct.Curl_multi* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  br label %15

15:                                               ; preds = %11, %2
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
